# janus

./: .editorconfig  .eslintrc.json  .gitignore  .prettierrc.json  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.bench  GETTING_STARTED.md  IMPLEMENTATION_PROGRESS.md  Makefile  README.md  START_HERE.md  WRITING_BENCHMARKS.md  ci-check.sh  docker-compose.yml  generate_realistic_data.py  jest.config.js  package.json  run_benchmarks.sh  rustfmt.toml  start_http_server.sh  test-demo.ts  test-janus-ql.js  test_live_streaming.sh  test_server.sh  test_setup.sh  tsconfig.json
.github/: CICD_GUIDE.md  copilot-instructions.md
.github/workflows/: ci.yml  docs-links.yml  fast-pr.yml  release.yml
.zed/: settings.json
benches/: README.md  analysis.rs  benchmark.rs  historical_fixed.rs  historical_sliding.rs  live_injection.rs  storage_write.rs  write_benchmark.rs
docker/mosquitto/config/: mosquitto.conf
docs/: ANOMALY_DETECTION.md  ARCHITECTURE.md  BASELINES.md  BENCHMARK_RESULTS.md  COMPLETE_SOLUTION.md  DOCUMENTATION_INDEX.md  EXECUTION_ARCHITECTURE.md  FINAL_TEST.md  FIXES_APPLIED.md  HTTP_API.md  HTTP_API_CURRENT.md  HTTP_API_IMPLEMENTATION.md  JANUSQL.md  LIVE_STREAMING_GUIDE.md  LIVE_STREAMING_READY.md  MVP_ARCHITECTURE.md  MVP_QUICKSTART.md  MVP_TODO.md  QUERY_EXECUTION.md  QUICKSTART_HTTP_API.md  QUICK_REFERENCE.md  README.md  README_HTTP_API.md  RSP_INTEGRATION_COMPLETE.md  RUNTIME_FIX_SUMMARY.md  SETUP_GUIDE.md  SPARQL_BINDINGS_UPGRADE.md  STREAM_BUS_CLI.md  TEST_HISTORICAL.md  TIMING_GUIDE.md  WINDOW_TYPES_EXPLAINED.md  WRITING_BENCHMARKS.md  live_extension_function_architecture.md
examples/: basic-usage.ts  basic.rs  comparator_demo.rs  debug_live.rs  demo_dashboard.html  h1_latency_benchmark.rs  h2_correctness_benchmark.rs  h4_scalability_benchmark.rs  http_client_example.rs  minimal_rsp_test.rs  point_query_benchmark.rs  range_query_benchmark.rs  realistic_rdf_benchmark.rs  test_query_pipeline.rs  test_storage_query.rs  test_storage_with_dict.rs
fuseki-config/: fuseki.ttl  shiro.ini
janus-dashboard/: README.md
janus-dashboard/src/: App.svelte
janus-dashboard/src/lib/: Query.svelte  StreamChart.svelte
results/: h1_isolation.csv  h1_latency.csv  h1_summary.csv  hardware.txt
rust/: Cargo.toml
rust/src/: error.rs  http_client.rs  lib.rs  parser.rs  query.rs  store.rs
scripts/: check_doc_links.sh  ci-check.sh  convert_to_nquads.py  download_citybench.sh  generate_historical_data.py  generate_historical_graph.py  generate_plots.py  generate_realistic_data.py  generate_summary.py  inject_anomalies.py  run_all_benchmarks.sh  start_http_server.sh  test_live_streaming.sh  test_server.sh  test_setup.sh
src/: StreamBrokerAdapter.ts  benchmarking.rs  index.ts  lib.rs  main.rs
src/adapters/: InMemoryAdapter.ts  JenaAdapter.test.ts  JenaAdapter.ts  OxigraphAdapter.test.ts  OxigraphAdapter.ts  WasmAdapter.test.ts  WasmAdapter.ts
src/anomaly/: math.rs  mod.rs  query_options.rs  registry.rs  rules.rs  vocab.rs
src/api/: janus_api.rs  mod.rs
src/benchmarking/: benchmark.rs  mod.rs
src/benchmarks/: benchmark.rs
src/core/: encoding.rs  mod.rs  types.ts
src/execution/: historical_executor.rs  mod.rs  result_converter.rs
src/extensions/: math.rs  mod.rs  query_options.rs  registry.rs  rules.rs
src/http/: mod.rs  server.rs
src/indexing/: dense.rs  dictionary.rs  mod.rs  shared.rs  sparse.rs
src/parsing/: janusql_parser.rs  mod.rs  rdf_parser.rs
src/query-processing/historical-query-processing/: HistoricalQueryProcessor.ts
src/query-processing/live-stream-processing/: JANUS-QL.md  JanusQLParser.ts  README.md  RSPEngineAdapter.ts  WORKFLOW.md
src/query-processing/live-stream-processing/examples/: janus-ql-example.ts  usage-examples.md
src/querying/: kolibrie_adapter.rs  main.rs  mod.rs  oxigraph_adapter.rs  query_processing.rs
src/registry/: mod.rs  query_registry.rs
src/rsp/: JanusQLParser.ts  RSPEngineAdapter.ts
src/sources/: kafka_adapter.rs  mod.rs  mqtt_adapter.rs  stream_ingestion_pipeline.rs  stream_source.rs
src/storage/: memory_tracker.rs  mod.rs  segmented_storage.rs  util.rs
src/storage/indexing/: dense.rs  dictionary.rs  sparse.rs
src/stream/: comparator.rs  live_stream_processing.rs  mod.rs  mqtt_subscriber.rs
src/stream/operators/: historical_fixed_window.rs  historical_sliding_window.rs  hs2r.rs  mod.rs
src/stream_bus/: mod.rs  stream_bus.rs
src/utils/: Util.ts  errors.ts  logger.ts  validators.ts
tests/: comparator_test.rs  dictionary_encoding_test.rs  dictionary_unit_test.rs  historical_fixed_window_test.rs  historical_sliding_window_test.rs  http_server_integration_test.rs  integration_test.rs  janus_api_integration_test.rs  janus_cli_test.rs  janusql_parser_test.rs  lib_test.rs  live_stream_integration_test.rs  oxigraph_adapter_test.rs  segmented_storage_error_test.rs  stream_bus_cli_test.rs  stream_bus_test.rs  two_pass_integration.rs
