[package]
name = "janus"
version = "0.1.0"
edition = "2021"
authors = ["Kush Bisen <mailkushbisen@gmail.com>"]
license = "MIT"
description = "A hybrid engine for unified Live and Historical RDF Stream Processing"
repository = "https://github.com/SolidLabResearch/janus"
keywords = ["rdf", "sparql", "semantic-web", "stream-processing", "rsp-ql"]
categories = ["database", "parser-implementations"]
readme = "README.md"

[dependencies]
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
rsp-rs = "0.2.1"
oxigraph = "0.5"
rumqttc = "0.25.1"
serde_json = "1.0.145"

[target.'cfg(not(windows))'.dependencies]
rdkafka = "0.38.0"

[lib]
name = "janus"
path = "src/lib.rs"

[[bin]]
name = "janus"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
