[package]
name = "janus"
version = "0.1.0"
edition = "2021"
authors = ["Kush Bisen <mailkushbisen@gmail.com>"]
license = "MIT"
description = "A hybrid engine for unified Live and Historical RDF Stream Processing"
repository = "https://github.com/SolidLabResearch/janus"
keywords = ["rdf", "sparql", "semantic-web", "stream-processing", "rsp-ql"]
categories = ["database", "parser-implementations"]
readme = "README.md"

[dependencies]
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
rsp-rs = "0.3.5"
oxigraph = "0.5"
rumqttc = "0.25.1"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
ctrlc = "3.5.1"
clap = { version = "4.5", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-tungstenite = "0.21"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"

[target.'cfg(not(windows))'.dependencies]
rdkafka = "0.38.0"

[lib]
name = "janus"
path = "src/lib.rs"

[[bin]]
name = "janus"
path = "src/main.rs"

[[bin]]
name = "http_server"
path = "src/bin/http_server.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
