[package]
name = "janus-rdf-rust"
version = "0.1.0"
edition = "2021"
authors = ["Janus Contributors"]
description = "Rust-based RDF data store integration with WASM support"
license = "MIT"
repository = "https://github.com/yourusername/janus"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# RDF and SPARQL libraries
oxigraph = "0.3"
oxrdf = "0.1"
oxrdfio = "0.1"
spargebra = "0.2"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"], optional = true }

# HTTP client for external RDF stores
reqwest = { version = "0.11", features = ["json"], optional = true }

# URL encoding
urlencoding = "2.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio-test = "0.4"
criterion = "0.5"

[features]
default = ["http-client"]
http-client = ["tokio", "reqwest"]
nodejs = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
